# clip

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALLING  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README.rst  aclocal.m4  configure  configure.ac  sonar-project.properties
src/: Makefile.am  Makefile.in  clipboard.c  clipboard.h  clipboard_entry.c  clipboard_entry.h  clipboard_events.c  clipboard_events.h  config.h  daemon.c  daemon.h  gtk_provider.c  gui.c  gui.h  gui_editor.c  gui_editor.h  gui_search.c  gui_search.h  history.c  history.h  keybinder.c  main.c  provider.c  provider.h  utils.c  utils.h
