AC_PREREQ([2.67])

AC_INIT([clip], [0.1], [bugs@burnison.ca])
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE(-Wall foreign)

AC_PROG_CC
PKG_PROG_PKG_CONFIG(0.25)

PKG_CHECK_MODULES(GTK, gtk+-3.0 >= 3.4.0)
PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.32.4)
PKG_CHECK_MODULES(X11, x11 >= 1.5.0)
AC_SUBST(DEPS_CFLAGS)
AC_SUBST(DEPS_LIBS)

AC_PATH_X
AC_STDC_HEADERS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
