AC_PREREQ([2.67])

AC_INIT([clip], [0.1], [bugs@burnison.ca])
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE([-Wall foreign])

AC_PROG_CC
AM_PROG_CC_C_O
PKG_PROG_PKG_CONFIG([0.25])


PKG_CHECK_MODULES(GTK, gtk+-3.0 >= 3.2.4)
PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.30.3)
PKG_CHECK_MODULES(X11, x11 >= 1.4.3)


AC_PATH_X
AC_STDC_HEADERS

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
